package com.ulima.incidenciaurbana.model;

public enum Prioridad {
    BAJA,
    MEDIA,
    ALTA
}
